--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   servlet:
-    context-path: /Blowdown
+    context-path: /Blowdown_Web
   port: 8080
 
 spring:
@@ -10,8 +10,8 @@ spring:
     username: root
     password: root
     #使用Unicode编码,UTF-8编码,SSL连接,中国标准时间
-    #url: jdbc:mysql://101.132.102.203:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSS=true&serverTimezone=Asia/Shanghai
-    url: jdbc:mysql://localhost:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSS=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://101.132.102.203:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+    #url: jdbc:mysql://localhost:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
   jpa:
     hibernate:
       ddl-auto: update
