--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.zistone</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>Blowdown_Web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
     <description>排污项目的服务端框架</description>
