--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
   port: 8080
 
 spring:
-  #数据源
+  #通用数据源
   datasource:
     driver: mysql.cj.jdbc.Driver
     username: root
@@ -13,26 +13,28 @@ spring:
     #url: jdbc:mysql://101.132.102.203:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     #url: jdbc:mysql://localhost:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     url: jdbc:mysql://49.234.4.245:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
-    #SpringBoot2.0以后默认连接池是Hikari,在引用parents后不用专门再添加依赖
-    hikari:
-      read-only: false
-      #维护的最小空闲数
-      minimum-idle=5
-      #最大连接数
-      maximum-pool-size=15
-      auto-commit=true
-      idle-timeout=30000
-      pool-name=DatebookHikariCP
-      #一个连接的有效时长
-      max-lifetime=1800000
-      connection-timeout=30000
-      connection-test-query=SELECT 1
+  #JPA配置
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    #禁用OpenSessionInView
+    open-in-view: false
+  #SpringBoot2.0以后默认连接池是Hikari
+  hikari:
+    read-only: false
+    #维护的最小空闲数
+    minimum-idle: 5
+    #最大连接数
+    maximum-pool-size: 15
+    auto-commit: true
+    idle-timeout: 30000
+    pool-name: DatebookHikariCP
+    #一个连接的有效时长
+    max-lifetime: 1800000
+    connection-timeout: 30000
+    connection-test-query: SELECT 1
     type: com.zaxxer.hikari.HikariDataSource
-  #  jpa:
-  #    hibernate:
-  #      ddl-auto: update
-  #    show-sql: true
-  #    open-in-view: false
   #    #初始化大小
   #    initialSize: 5
   #    minIdle: 10
