--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.6.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.zistone</groupId>
     <artifactId>Blowdown_Web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Blowdown_web</name>
+    <packaging>jar</packaging>
     <description>排污项目的服务端框架</description>
 
     <properties>
@@ -50,6 +51,14 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+        <!--使用外部Tomcat
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        -->
+
     </dependencies>
 
     <build>
