--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     driver: mysql.cj.jdbc.Driver
     username: root
-    password: Passw0rd
+    password: root
     #password: Passw0rd
     #使用Unicode编码,UTF-8编码,SSL连接,中国标准时间
     #url: jdbc:mysql://101.132.102.203:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
