--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,10 @@ server:
   port: 8080
 
 spring:
-  #通用数据源
+
+  #数据源
   datasource:
+    #MySQL
     driver: mysql.cj.jdbc.Driver
     username: root
     password: root
@@ -15,6 +17,18 @@ spring:
     #url: jdbc:mysql://49.234.4.245:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     #url: jdbc:mysql://127.0.0.1:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     url: jdbc:mysql://129.204.165.206:3306/zistone?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+
+    #MongoDB
+  application:
+    name: spirng-boot-mongodb
+  data:
+    mongodb:
+      host: 49.234.4.245
+      port: 27017
+      database: admin
+      username: root
+      password: Passw0rd
+
   #JPA配置
   jpa:
     hibernate:
@@ -22,6 +36,7 @@ spring:
     show-sql: true
     #禁用OpenSessionInView
     open-in-view: false
+
   #SpringBoot2.0以后默认连接池是Hikari
   hikari:
     read-only: false
@@ -64,6 +79,7 @@ spring:
   #    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=1000;druid.stat.logSlowSql=true
   #    #合并多个DruidDataSource的监控数据
   #    useGlobalDataSourceStat: true
+
   #时间戳统一转换
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
