--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,7 +80,7 @@ spring:
   #    maxPoolPreparedStatementPerConnectionSize: 20
   #    #配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
   #    filters: stat,wall,log4j
-  #    #通过connectProperties属性来打开mergeSql功能；慢SQL记录
+  #    #通过connectProperties属性来打开mergeSql功能;慢SQL记录
   #    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=1000;druid.stat.logSlowSql=true
   #    #合并多个DruidDataSource的监控数据
   #    useGlobalDataSourceStat: true
