--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <version>7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.42.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
